JSON errors should be informative https://bugs.webkit.org/show_bug.cgi?id=63339

Source/JavaScriptCore:

Added error messages to the JSON Parser.

Patch by Juan C. Montemayor <jmont@apple.com> on 2011-07-25
Reviewed by Oliver Hunt.

* runtime/JSONObject.cpp:
(JSC::JSONProtoFuncParse):
* runtime/LiteralParser.cpp:
(JSC::LiteralParser::Lexer::lex):
(JSC::LiteralParser::Lexer::lexString):
(JSC::LiteralParser::Lexer::lexNumber):
(JSC::LiteralParser::parse):
* runtime/LiteralParser.h:
(JSC::LiteralParser::getErrorMessage):
(JSC::LiteralParser::Lexer::sawError):
(JSC::LiteralParser::Lexer::getErrorMessage):

LayoutTests:

Updated expected test results.

Patch by Juan C. Montemayor <jmont@apple.com> on 2011-07-25
Reviewed by Oliver Hunt.

* fast/js/JSON-parse-expected.txt:
* platform/chromium/fast/js/JSON-parse-expected.txt: Added.

Canonical link: https://commits.webkit.org/80862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91686 268f45cc-cd09-0410-ab3c-d52691b4dbfc